# cl_dte_lib

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: _common.py  exchange_demo.py  folio_management_demo.py  generate_invoice_33.py  inspect_caf.py  printout_demo.py  purchase_book_demo.py  rcv_demo.py  sales_book_demo.py  send_demo.py  sign_demo.py  stamp_demo.py  token_demo.py  validate_book_operational.py  validate_demo.py  verify_roundtrip.py  verify_stamp_png.py
schemas/: README.md  download_schemas.ps1
src/dte_chile/: __init__.py  _http.py  bhe.py  book.py  caf.py  certificate.py  document_types.py  envelope.py  errors.py  exchange.py  folios.py  models.py  rcv.py  representation.py  rut.py  signer.py  sii_client.py  ted.py  validation.py  xml_builder.py
tests/: conftest.py  test_bhe.py  test_book.py  test_dte_build.py  test_exchange.py  test_folios.py  test_rcv.py  test_representation.py  test_rut.py  test_validation.py  test_xsd_integracion.py
