[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dte_chile"
version = "0.3.0"
description = "Motor de facturación electrónica (DTE) para Chile - SII"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Dimabe / Grupo Los Lirios" }]
dependencies = [
    "lxml>=5.0",
    "cryptography>=42.0",
    "xmlsec>=1.3.14",
    "requests>=2.31",
    "pdf417gen>=0.7.1",
    "filelock>=3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
    "pdf417decoder>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# UP031: el patrón "{%s}local" % NS es el idiom legible para tags namespaced de lxml.
ignore = ["UP031"]
# E402: los scripts en examples/ insertan sys.path antes de importar (es a propósito).
per-file-ignores = { "examples/*" = ["E402"], "tests/*" = ["E402"] }

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true      # lxml/xmlsec/pdf417gen no traen stubs completos
warn_unused_ignores = true
no_implicit_optional = true
